# car-advisor-multiagentsystem

./: .gitignore  README.md  agent.py  api_server.py  car-buying-advisor.jsx  main.py  pyproject.toml  requirements.txt
agents/: __init__.py
agents/comparison_agent/: __init__.py  comparison_agent.py
agents/mot_agent/: agent.py
agents/orchestrator_agent/: agent.py  callbacks.py
agents/price_agent/: price_agent.py
car_consultant/: agent.py  requirements.txt  running_costs_agent.py
car_consultant/mot_agent/: mot_agent.py
common/: __init__.py  retry.py
deployment/: deploy.py
mot_history_mcp_server/: README.md  main.py  pyproject.toml  run_local_http.py  server.py
