[project]
name = "car-advisor"
version = "0.1.0"
description = "A multi-agent system for car advice, built with Google ADK and GenAI."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-cloud-aiplatform[agent_engines]>=1.132.0,<2.0.0",
    "google-adk==1.26.0",
    "vertexai>=1.38.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-dotenv>=1.0.0",
    "requests>=2.32.4",
    "numpy>=1.24.0",
    "google-cloud-logging>=3.12.0,<4.0.0",
    "gcsfs>=2024.11.0",
    "opentelemetry-instrumentation-fastapi",
    "opentelemetry-instrumentation-grpc",
    "opentelemetry-instrumentation-httpx",
    "opentelemetry-instrumentation-google-genai>=0.4b0",
    "opentelemetry-instrumentation-vertexai>=2.0b0",
    "google-auth",
    "google-auth-httplib2"
]

[dependency-groups]
dev = [
    "pytest>=8.3.4,<9.0.0",
    "pytest-asyncio>=0.23.8,<1.0.0",
    "nest-asyncio>=1.6.0,<2.0.0",
]

[project.optional-dependencies]
eval = [
    "google-adk[eval]>=1.15.0,<2.0.0",
]
lint = [
    "ruff>=0.4.6,<1.0.0",
    "codespell>=2.2.0,<3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agents", "common", "backend"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "C", "B", "UP", "RUF"]
ignore = ["E501", "C901", "B006"]

[tool.ruff.lint.isort]
known-first-party = ["agents", "common", "backend", "frontend"]

[tool.pytest.ini_options]
pythonpath = "."
asyncio_default_fixture_loop_scope = "function"

[tool.codespell]
ignore-words-list = "rouge"
skip = "uv.lock,.venv,./frontend,**/package-lock.json"
